Fix #11 (race condition in Linux)